# profile.mobile.apps.native.phone-contacts

./: .gitignore  CMakeLists.txt  WORKSPACE  build  deploy  org.tizen.contacts-1.0.0-arm.tpk  org.tizen.contacts-1.0.0-i386.tpk  org.tizen.contacts-2.0.0-arm-debug.tpk  org.tizen.contacts-2.0.0-arm.tpk  org.tizen.contacts-2.0.0-arm_debug.tpk  org.tizen.contacts-2.0.0-i386-debug.tpk  org.tizen.contacts-2.0.0-i386.tpk  org.tizen.contacts-2.0.0-i386_debug.tpk  project.config
app-assist-efl/: .cproject  .project  CMakeLists.txt  project_def.prop
app-assist-efl/inc/: IWUiObject.h  WApp.h  WAppEventHandler.h  WAppWindow.h  WButton.h  WControl.h  WDebugBase.h  WDefine.h  WEditfield.h  WEvasObject.h  WGengridItem.h  WGenlistItem.h  WMenuPopup.h  WNaviframe.h  WPageSlideView.h  WPopup.h  WToastPopup.h  WUiTimer.h  WView.h  WWidget.h  WWidgetApp.h  WWidgetWindow.h  WWindow.h
app-assist-efl/res/: CMakeLists.txt
app-assist-efl/res/edje/: app-assist-efl.edc
app-assist-efl/src/: WApp.cpp  WAppEventHandler.cpp  WAppImpl.h  WAppWindow.cpp  WButton.cpp  WControl.cpp  WDebugInternal.h  WDefineInternal.h  WEditfield.cpp  WEvasObject.cpp  WGengridItem.cpp  WGenlistItem.cpp  WMenuPopup.cpp  WNaviframe.cpp  WPageSlideView.cpp  WPopup.cpp  WToastPopup.cpp  WUiTimer.cpp  WVersion.cpp  WView.cpp  WWidget.cpp  WWidgetApp.cpp  WWidgetWindow.cpp  WWindow.cpp  WWindowImpl.h
lib-common/: .cproject  .project  CMakeLists.txt  project_def.prop
lib-common/inc/: ContactsAppControl.h  ContactsCommon.h  ContactsDebug.h  ContactsLocalization.h  ContactsNumberItemIcons.h  ContactsThumbnail.h  ContactsUtils.h  IContactsTabPageView.h  SystemSettingsMgr.h
lib-common/inc/App/: AppControl.h  AppControlRequest.h  Application.h  Path.h
lib-common/inc/Common/: Actions.h  DataTypes.h  Strings.h  Utils.h
lib-common/inc/Contacts/: ContactData.h  ContactDataProvider.h  ContactRecordChildIterator.h  ContactRecordChildIteratorImpl.h  DbChangeObserver.h  DbProvider.h  ObjectType.h  Provider.h  RecordListIterator.h  ResultObject.h  ResultProvider.h  SelectAllItem.h  SelectItem.h  SelectTypes.h  SelectView.h  Utils.h  UtilsImpl.h
lib-common/inc/Ui/: Control.h  Editfield.h  Genlist.h  GenlistCheckItem.h  GenlistGroupItem.h  GenlistItem.h  GenlistIterator.h  Hoversel.h  Menu.h  Naviframe.h  NaviframePage.h  Navigator.h  NavigatorPage.h  Popup.h  ProgressController.h  ProgressPopup.h  RadioPopup.h  Scale.h  TabPage.h  TabView.h  Thumbnail.h  View.h  Window.h
lib-common/inc/Utils/: Callback.h  CallbackImpl.h  Iterator.h  Logger.h  Range.h  Tracer.h  UniString.h
lib-common/res/common/: CMakeLists.txt
lib-common/res/details/: CMakeLists.txt
lib-common/src/: ContactsAppControl.cpp  ContactsCommon.cpp  ContactsNumberItemIcons.cpp  ContactsThumbnail.cpp  SystemSettingsMgr.cpp
lib-common/src/App/: AppControl.cpp  AppControlRequest.cpp  Path.cpp
lib-common/src/Common/: Actions.cpp  Strings.cpp  Utils.cpp
lib-common/src/Contacts/: ContactData.cpp  ContactDataProvider.cpp  DbChangeObserver.cpp  DbProvider.cpp  Dummy.cpp  Provider.cpp  SelectAllItem.cpp  SelectItem.cpp  SelectView.cpp  Utils.cpp
lib-common/src/Ui/: Control.cpp  Editfield.cpp  Genlist.cpp  GenlistCheckItem.cpp  GenlistGroupItem.cpp  GenlistItem.cpp  GenlistIterator.cpp  Hoversel.cpp  ListPopup.cpp  Menu.cpp  Naviframe.cpp  NaviframePage.cpp  Navigator.cpp  Popup.cpp  ProgressController.cpp  ProgressPopup.cpp  RadioPopup.cpp  TabPage.cpp  Thumbnail.cpp  View.cpp  Window.cpp
lib-common/src/Utils/: Tracer.cpp  UniString.cpp
lib-contact/: .cproject  .project  CMakeLists.txt  project_def.prop
lib-contact/ct-common/: CMakeLists.txt
lib-contact/ct-common/inc/: CtCommon.h  CtPath.h  CtProgressBarPopup.h  CtProgressController.h  CtRegistryMgr.h  CtString.h  CtThemeMgr.h  CtThread.h  CtType.h  CtView.h  ICtChangeListener.h
lib-contact/ct-common/src/: CtCommon.cpp  CtProgressBarPopup.cpp  CtProgressController.cpp  CtRegistryMgr.cpp  CtString.cpp  CtThemeMgr.cpp  CtThread.cpp  CtView.cpp
lib-contact/ct-detail/: CMakeLists.txt
lib-contact/ct-detail/inc/: CtDetailView.h  CtDetailViewBasicInfoControl.h  CtInputView.h  CtMyProfileDetailView.h  CtMyProfileInputView.h
lib-contact/ct-detail/src/: CtData.h  CtDetailData.cpp  CtDetailData.h  CtDetailDataBase.h  CtDetailView.cpp  CtDetailViewAddressItem.h  CtDetailViewBasicInfoControl.cpp  CtDetailViewEmailItem.h  CtDetailViewEventItem.h  CtDetailViewMessengerItem.h  (+35 more)
lib-contact/ct-list/: CMakeLists.txt
lib-contact/ct-setting/: CMakeLists.txt
lib-contact/ct-tab/: CMakeLists.txt
lib-contact/ct-vcard/: CMakeLists.txt
lib-contact/res/: CMakeLists.txt
lib-contacts/: .cproject  .project  CMakeLists.txt  project_def.prop
lib-contacts/res/: CMakeLists.txt
lib-logs/: .cproject  .project  CMakeLists.txt  project_def.prop
lib-phone/: .cproject  .project  CMakeLists.txt  project_def.prop
lib-phone/ph-common/: CMakeLists.txt
lib-phone/ph-dialer/: CMakeLists.txt
lib-phone/ph-loglist/: CMakeLists.txt
lib-phone/ph-speeddial/: CMakeLists.txt
lib-phone/res/: CMakeLists.txt  dialer  speeddial
main-app/: .cproject  .project  .tproject  CMakeLists.txt  org.tizen.contacts.efl  org.tizen.contacts.manifest  org.tizen.contacts.xml  project_def.prop  smack.efl.in  smack.manifest.in  tizen-manifest.xml  tizen-manifest.xml.in
main-app/inc/: ContactsApp.h  MainApp.h  OperationController.h  OperationDefaultController.h  OperationEditController.h  OperationPickController.h  OperationViewController.h
main-app/res/: CMakeLists.txt
main-app/src/: CMakeLists.txt  ContactsApp.cpp  MainApp.cpp  OperationController.cpp  OperationDefaultController.cpp  OperationEditController.cpp  OperationPickController.cpp  OperationViewController.cpp  PreferenceInitializer.cpp  main.cpp
widget/: .cproject  .project  .tproject  CMakeLists.txt  project_def.prop  tizen-manifest.xml
widget/inc/: Widget.h  WidgetApp.h  WidgetDatabase.h  WidgetGengridItem.h  WidgetItem.h  WidgetItemType.h  WidgetItems.h
widget/src/: Widget.cpp  WidgetApp.cpp  WidgetDatabase.cpp  WidgetGengridItem.cpp  WidgetItem.cpp  WidgetItems.cpp  main.cpp
(+902 files in other folders)
