CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(contacts CXX)

# install configuration file
CONFIGURE_FILE(${PKGNAME}.xml ${CMAKE_BINARY_DIR}/${PKGNAME}.xml)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.png DESTINATION ${CMAKE_APP_ICON_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.phone.png DESTINATION ${CMAKE_APP_ICON_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}.xml DESTINATION ${CMAKE_APP_SHARE_PACKAGES_DIR})

# Add your submodule directory name
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(res)
