CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${EXE_NAME} CXX)

# install configuration file
CONFIGURE_FILE(${PKG_NAME}.xml ${CMAKE_BINARY_DIR}/${PKG_NAME}.xml)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKG_NAME}.png DESTINATION ${CMAKE_APP_ICON_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/org.tizen.phone.png DESTINATION ${CMAKE_APP_ICON_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PKG_NAME}.xml DESTINATION ${CMAKE_APP_SHARE_PACKAGES_DIR})

# Add your submodule directory name
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(res)
