CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ct-common CXX)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/app-assist-efl/inc
	${CMAKE_SOURCE_DIR}/lib-common/inc
	${CMAKE_CURRENT_SOURCE_DIR}/inc
)

FILE(GLOB SRCS "src/*.cpp")
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${TIZEN_PKGS_LDFLAGS}
	"app-assist-efl"
	"contacts-common"
)
